# aiida-dlpoly

./: CITATION.cff  README.md  pyproject.toml  run_tests.sh  tmp.out
.github/workflows/: ci-docs.yml  ci-release.yml  ci-testing.yml
docker/testing/: Dockerfile
docs/source/: conf.py  index.rst
src/aiida_dlpoly/: __init__.py  utils.py
src/aiida_dlpoly/calculations/: __init__.py  base.py
src/aiida_dlpoly/parsers/: __init__.py  base.py
src/aiida_dlpoly/workflows/: __init.py
tests/: conftest.py  test_calcs_base.py  test_inputs_base.py  test_utils.py
tests/data/: Ar.control  CONTROL  NaCl.control  NaCl.field
